# hftv2

./: .gitignore  Install Or Update From GitHub.bat  Open Trading Platform.bat  README.md  app.py  docker-compose.yml  env.example.txt  pyproject.toml  requirements.txt
.github/workflows/: python-check.yml
adapters/brokers/alpaca/: __init__.py  client.py
adapters/brokers/webull/: __init__.py  client.py
adapters/data_providers/polygon_massive/: __init__.py  client.py
config/: logging.py  settings.py
core/: orchestrator.py  service_base.py
core/analytics_engine/: service.py
core/backtest_engine/: __init__.py  alpaca_historical.py  service.py  simulator.py
core/data_engine/: __init__.py  service.py
core/execution_engine/: __init__.py  service.py
core/risk_engine/: service.py
core/scanner_engine/: __init__.py  service.py
core/strategy_engine/: __init__.py  catalog.py  service.py
database/: hft_platform.db-journal  init_db.py  models.py  session.py
gui/: README.md  system_health_dashboard.html
scripts/: bootstrap_from_github.ps1  publish_to_github.ps1  run_with_auto_update.py  smoke_check.py  start_platform.bat  start_platform.ps1  start_platform.py
utils/: event_bus.py  git_updates.py  preferences.py  runtime_version.py  schemas.py  system_monitor.py
