[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hft-bot-platform"
version = "0.1.0"
description = "Local automated trading workstation backend foundation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "fastapi>=0.116.0",
    "pydantic-settings>=2.10.1",
    "psycopg[binary]>=3.2.9",
    "redis>=6.0.0",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["adapters*", "config*", "core*", "database*", "utils*"]

[tool.ruff]
line-length = 100
target-version = "py311"

